--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hi and there kyal lin soe</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus aliquam pariatur tenetur ipsa voluptas aspernatur suscipit. Animi quis beatae nihil, nisi temporibus enim esse voluptas magni, illo laudantium perferendis ipsam.
+        
+    </p>
 </body>
 </html>
